--- a/style.css
+++ b/style.css
@@ -1,19 +1,37 @@
 body{
     text-align: center;
+    background-image: url(fotos/fundo.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    
 }
 
 div{
-    width: 300px;
+    width: 280px;
     border-style:solid;
     border-width: 1px;
     text-align: center;   
     margin: 0 auto;
+    color: aliceblue;
 }
 input{
-    width: 200px;
+    width: 180px;
     text-align: center;
     border-radius: 5px;
+    color: black;
 }
-button{
+.index{
     width: 75px;
+    background-color: #18181C;
+    color: white;
+    border: 2px solid white; 
+}
+h1{
+    color: aliceblue;
+}
+.ovo{
+    width: 100px;
+    background-color: #18181C;
+    color: white;
+    border: 2px solid white; 
 }
